<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/gallery_icon"
        android:title="@string/gallery_menu_ttl" />
    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/vector_play"
        android:title="@string/play_menu_ttl" />
    <item
        android:id="@+id/settingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/vector_profile"
        android:title="@string/profile_menu_ttl" />
</menu>