<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".login.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="104dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/log_in_tag"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmailLogin"
            android:hint="@string/email_placeholder_login"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPasswordLogin"
            android:hint="@string/password_placeholder_login"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/red"
        android:text="@string/login_error"
        android:textStyle="bold"
        android:visibility="gone"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="94dp" />

    <Button
        android:id="@+id/buttonSubmitLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:elevation="30dp"
        android:stateListAnimator="@null"
        android:text="@string/button_submit_login"
        android:textSize="26sp"
        android:translationZ="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textViewRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register_login"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/buttonContinueAsGuest"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:backgroundTint="@color/black"
        android:text="@string/button_continue_as_guest"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:elevation="10dp"
        android:translationZ="2dp"
        android:stateListAnimator="@null"/>


</LinearLayout>