<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ivBeerSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".home_fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/settingsPfpImageView"
            android:layout_width="150dp"
            android:layout_height="155dp"
            android:layout_marginTop="44dp"
            android:background="@color/black"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/vector_profile"
            app:shapeAppearanceOverlay="@style/circularShape"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewProfileUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Switch
            android:id="@+id/switchSounds"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/settings_sounds"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchVibration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/settings_vibration"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchMusic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/settings_music"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogInOut"
            android:layout_width="189dp"
            android:layout_height="43dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/black"
            android:gravity="center|top"
            android:text="@string/button_submit_registration"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>